<?xml version="1.0"?>
<package>
  <name>husarion_rplidar</name>
  <version>1.0.0</version>
  <description>Husarion launch files for rplidar</description>
  <maintainer email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rplidar_ros</build_depend>
  <run_depend>rplidar_ros</run_depend>
</package>